<resources>
    <string name="app_name">LoginRegisterFirebase</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_text">Don\'t have an account? Sign up here</string>
    <string name="register">Register</string>
    <string name="sign_in_text">Already have an account? Sign in here</string>
    <string name="log_out">Log out</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
</resources>
